Fix(core) Fix positioning on <ul> in nav bar
Fixed the navigation bar links to correct length
  from the logo. Before it was too far away.

--- a/styles/main.css
+++ b/styles/main.css
@@ -81,7 +81,7 @@ nav {
 }
 
 ul{
-  margin-left: 200px;
+  margin-left: 150px;
   position: relative;
   margin-top: 8px;
 }
